ghc-4335c07/testsuite/tests/typecheck/should_fail/T4921.hs
{-# LANGUAGE MultiParamTypeClasses #-}
module T4921 where

class C a b where
    f :: (a,b)

instance C Int Char where
    f = undefined

x = fst f

y = fst f :: Int
